fix: make the header able to repsond to different size, but still need to make a side bar on mobile rendering

--- a/web-next-js/src/app/base.scss
+++ b/web-next-js/src/app/base.scss
@@ -96,3 +96,19 @@ html, body {
   animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
   animation-iteration-count: 1;
 }
+
+.routerlink-en{
+  color: white;
+  font-family: 'Noto Sans SC';
+  font-weight: 900;
+  letter-spacing: 0px;
+  font-size: 40%;
+}
+
+.routerlink-ch{
+  color: white;
+  font-family: 'Noto Sans';
+  font-weight:900;
+  letter-spacing: 0px;
+  font-size: 40%;
+}
